fixing mobile div overflow on events page

--- a/src/showListings/showListings.css
+++ b/src/showListings/showListings.css
@@ -33,7 +33,7 @@ justify-content: space-between;
   }
 
   h3 {
-    max-width: 33vw;
+    max-width: 33.3vw;
   }
 }
 
